adjust fit weights/bounds: Hill coefficient weight -> 25, non-neutralized frac upper bound -> 0.5

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -152,7 +152,7 @@
     "where $\\lambda_{\\rm{Hill coefficient}}$ is the strength of the regularization.\n",
     "Note that it is important that the Hill coefficients be fairly strongly normalized.\n",
     "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 200 when $n_e = 1/3$ or $n_e = 3$, a penalty of 50 when $n_e = 1/2$ or $n_e = 2$, and a penalty of 12.5 when $n_e = 1.5$ or $n_e = 1 / 1.5$.\n",
-    "Note also that the minimization bounds $n_e > 0$."
+    "Note also that the minimization bounds $0 < n_e$."
    ]
   },
   {
@@ -171,7 +171,7 @@
     "where $\\lambda_{\\rm{non-neutralized-frac}}$ is the strength of the regularization.\n",
     "Note that the regularization should be fairly strong.\n",
     "For instance, value of $\\lambda_{\\rm{non-neutralized-frac}} = 1000$ creates a penalty of 10 when $t_e = 0.1$ and a penalty of 62.5 when $t_e = 0.25$.\n",
-    "Note also that the minimization bounds $1 \\ge t_e \\ge 0$."
+    "Note also that the minimization bounds $0.5 \\ge t_e \\ge 0$."
    ]
   },
   {
