--- a/notebooks/fit_2epitope.ipynb
+++ b/notebooks/fit_2epitope.ipynb
@@ -331,7 +331,7 @@
    ],
    "source": [
     "# NBVAL_IGNORE_OUTPUT\n",
-    "opt_res = model.fit(logfreq=200, reg_escape_weight=reg_escape_weight, non_neutralized_frac_bounds=(0, 0.5), reg_hill_coefficient_weight=25)"
+    "opt_res = model.fit(logfreq=200, reg_escape_weight=reg_escape_weight)"
    ]
   },
   {
