change Hill coefficient regularization (#157)
* changed Hill coefficient regularization to quadratic-like form

* adjust fit weights/bounds: Hill coefficient weight -> 25, non-neutralized frac upper bound -> 0.5

* re-run notebook examples

* `black` formatting

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -142,12 +142,17 @@
     "### Regularization of Hill coefficients\n",
     "We regularize the Hill coefficients $n_e$ to be close to one using the regularization, using a penalty that essentially operates on the log of $n_e$ so the values are bounded by 0 and infinity:\n",
     "$$\n",
-    "R_{\\rm{Hill coefficient}} = \\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)^2\n",
+    "R_{\\rm{Hill coefficient}}\n",
+    "=\n",
+    "\\begin{cases}\n",
+    "\\lambda_{\\rm{Hill coefficient}} n_e^2 & \\rm{if\\;} n_e \\ge 1 \\\\\n",
+    "\\lambda_{\\rm{Hill coefficient}} \\left(1 - 1/n_e\\right)^2 & \\rm{if\\;} n_e < 1 \\\\\n",
+    "\\end{cases}\n",
     "$$\n",
     "where $\\lambda_{\\rm{Hill coefficient}}$ is the strength of the regularization.\n",
     "Note that it is important that the Hill coefficients be fairly strongly normalized.\n",
-    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 24 when $n_e = 0.5$ or $n_e = 2$, and a penalty of 8.2 when $n_e = 1.5$ or $n_e = 1 / 1.5$.\n",
-    "Note also that the minimization bounds $n_e > 0$."
+    "For instance, a value of $\\lambda_{\\rm{Hill coefficient}} = 50$ creates a penalty of 200 when $n_e = 1/3$ or $n_e = 3$, a penalty of 50 when $n_e = 1/2$ or $n_e = 2$, and a penalty of 12.5 when $n_e = 1.5$ or $n_e = 1 / 1.5$.\n",
+    "Note also that the minimization bounds $0 < n_e$."
    ]
   },
   {
@@ -166,7 +171,7 @@
     "where $\\lambda_{\\rm{non-neutralized-frac}}$ is the strength of the regularization.\n",
     "Note that the regularization should be fairly strong.\n",
     "For instance, value of $\\lambda_{\\rm{non-neutralized-frac}} = 1000$ creates a penalty of 10 when $t_e = 0.1$ and a penalty of 62.5 when $t_e = 0.25$.\n",
-    "Note also that the minimization bounds $1 \\ge t_e \\ge 0$."
+    "Note also that the minimization bounds $0.5 \\ge t_e \\ge 0$."
    ]
   },
   {
@@ -413,7 +418,10 @@
     "$$\n",
     "\\frac{\\partial R_{\\rm{Hill coefficient}}}{\\partial n_e}\n",
     "=\n",
-    "\\frac{2\\lambda_{\\rm{Hill coefficient}} \\left(\\log n_e\\right)}{n_e}\n",
+    "\\begin{cases}\n",
+    "2\\left(x - 1\\right) & \\rm{if\\;} x \\ge 1 \\\\\n",
+    "2 / x^2 - 2 / x^3 & \\rm{if\\;} x < 1 \\\\\n",
+    "\\end{cases}\n",
     "$$"
    ]
   },
