re-run notebooks

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -14,11 +14,13 @@
     "The fitting is implemented in the `Polyclonal.fit` function, which allows adjustment of the weights for the regularization.\n",
     "By default the optimization uses the gradient-based L-BFGS-B method implemented in [scipy.optimize.minimize](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html) and simply continues optimization until the minimization converges.\n",
     "\n",
-    "Two key details about the fitting are as follows:\n",
+    "Some key details about the fitting are as follows:\n",
     "\n",
     " 1. By default, the fitting first fits a \"site-level\" model in which all mutations are lumped together so there are just two characters (wildtype and mutant). The escape values from this initial site-level fitting are then used to initialize the full mutation-level escape values which are then further optimized. The idea is that first fitting a simpler model with less parameters helps get the parameters into a \"reasonable\" space before full model optimization. This option is implemented via the `fit_site_level_first` parameter to `Polyclonal.fit`, and it is recommended to use this approach as testing indicates it helps.\n",
     " \n",
-    " 2. By default, if there are multiple variants with the same mutations, they are by default treated as indenpendent measurements that are fit. This can be changed to \"collapse\" them to a single variant that is then given a weight proportional to the number of constituent variants that is used when calculating the loss. This option is implemented by default via `collapse_identical_variants` during the initialization of a `Polyclonal` object. It speeds up fitting without (usually) substantially changing the fitting results. However, do **not** collaps if you are using bootstrapping.\n",
+    " 2. By default, if you are using free-parameter Hill coefficients or non-neutralized fractions, a model with those fixed is fit first via `fit_fixed_first`. It is fit with stronger regulation on the activities (via `fit_fixed_first_reg_activity_weight`) to keep epitopes from dropping too low in activity to be picked up in subsequent all-parameter optimization. When this model is being used, the site model is fit with this fixed model, not the later full model.\n",
+    " \n",
+    " 3. By default, if there are multiple variants with the same mutations, they are by default treated as independent measurements that are fit. This can be changed to \"collapse\" them to a single variant that is then given a weight proportional to the number of constituent variants that is used when calculating the loss. This option is implemented by default via `collapse_identical_variants` during the initialization of a `Polyclonal` object. It speeds up fitting without (usually) substantially changing the fitting results. However, do **not** collaps if you are using bootstrapping.\n",
     " \n",
     "The `Polyclonal.fit` also allows you to adjust the weights on the regularizations.\n",
     "The default should be sensible, but you may want to try adjusting them about.\n",
