fixes to pass tests

--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -22,11 +22,11 @@
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:06.810771Z",
-     "iopub.status.busy": "2023-02-21T18:54:06.810533Z",
-     "iopub.status.idle": "2023-02-21T18:54:08.471460Z",
-     "shell.execute_reply": "2023-02-21T18:54:08.470673Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:06.810748Z"
+     "iopub.execute_input": "2023-02-25T23:24:17.918701Z",
+     "iopub.status.busy": "2023-02-25T23:24:17.918471Z",
+     "iopub.status.idle": "2023-02-25T23:24:20.054315Z",
+     "shell.execute_reply": "2023-02-25T23:24:20.053442Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:17.918677Z"
     },
     "tags": []
    },
@@ -56,11 +56,11 @@
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:08.475102Z",
-     "iopub.status.busy": "2023-02-21T18:54:08.474877Z",
-     "iopub.status.idle": "2023-02-21T18:54:09.092826Z",
-     "shell.execute_reply": "2023-02-21T18:54:09.092112Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:08.475082Z"
+     "iopub.execute_input": "2023-02-25T23:24:20.057931Z",
+     "iopub.status.busy": "2023-02-25T23:24:20.057654Z",
+     "iopub.status.idle": "2023-02-25T23:24:20.539747Z",
+     "shell.execute_reply": "2023-02-25T23:24:20.538989Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:20.057911Z"
     },
     "tags": []
    },
@@ -138,11 +138,11 @@
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:09.095563Z",
-     "iopub.status.busy": "2023-02-21T18:54:09.095362Z",
-     "iopub.status.idle": "2023-02-21T18:54:09.111798Z",
-     "shell.execute_reply": "2023-02-21T18:54:09.111109Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:09.095546Z"
+     "iopub.execute_input": "2023-02-25T23:24:20.543075Z",
+     "iopub.status.busy": "2023-02-25T23:24:20.542808Z",
+     "iopub.status.idle": "2023-02-25T23:24:20.561496Z",
+     "shell.execute_reply": "2023-02-25T23:24:20.560708Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:20.543055Z"
     },
     "tags": []
    },
@@ -174,11 +174,11 @@
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:09.115812Z",
-     "iopub.status.busy": "2023-02-21T18:54:09.115548Z",
-     "iopub.status.idle": "2023-02-21T18:54:09.315965Z",
-     "shell.execute_reply": "2023-02-21T18:54:09.314641Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:09.115795Z"
+     "iopub.execute_input": "2023-02-25T23:24:20.566207Z",
+     "iopub.status.busy": "2023-02-25T23:24:20.566012Z",
+     "iopub.status.idle": "2023-02-25T23:24:20.749703Z",
+     "shell.execute_reply": "2023-02-25T23:24:20.748125Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:20.566188Z"
     },
     "tags": []
    },
@@ -216,11 +216,11 @@
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:09.320179Z",
-     "iopub.status.busy": "2023-02-21T18:54:09.319868Z",
-     "iopub.status.idle": "2023-02-21T18:54:09.463187Z",
-     "shell.execute_reply": "2023-02-21T18:54:09.461934Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:09.320151Z"
+     "iopub.execute_input": "2023-02-25T23:24:20.754367Z",
+     "iopub.status.busy": "2023-02-25T23:24:20.754060Z",
+     "iopub.status.idle": "2023-02-25T23:24:20.890125Z",
+     "shell.execute_reply": "2023-02-25T23:24:20.888957Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:20.754337Z"
     },
     "tags": []
    },
@@ -241,11 +241,11 @@
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:09.468958Z",
-     "iopub.status.busy": "2023-02-21T18:54:09.468440Z",
-     "iopub.status.idle": "2023-02-21T18:54:09.617547Z",
-     "shell.execute_reply": "2023-02-21T18:54:09.616230Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:09.468893Z"
+     "iopub.execute_input": "2023-02-25T23:24:20.894758Z",
+     "iopub.status.busy": "2023-02-25T23:24:20.894408Z",
+     "iopub.status.idle": "2023-02-25T23:24:21.032313Z",
+     "shell.execute_reply": "2023-02-25T23:24:21.030531Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:20.894726Z"
     },
     "tags": []
    },
@@ -274,11 +274,11 @@
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:09.621844Z",
-     "iopub.status.busy": "2023-02-21T18:54:09.621590Z",
-     "iopub.status.idle": "2023-02-21T18:54:10.480576Z",
-     "shell.execute_reply": "2023-02-21T18:54:10.478927Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:09.621811Z"
+     "iopub.execute_input": "2023-02-25T23:24:21.037402Z",
+     "iopub.status.busy": "2023-02-25T23:24:21.037122Z",
+     "iopub.status.idle": "2023-02-25T23:24:21.930072Z",
+     "shell.execute_reply": "2023-02-25T23:24:21.928235Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:21.037370Z"
     },
     "tags": []
    },
@@ -294,11 +294,11 @@
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:10.486193Z",
-     "iopub.status.busy": "2023-02-21T18:54:10.485843Z",
-     "iopub.status.idle": "2023-02-21T18:54:11.154879Z",
-     "shell.execute_reply": "2023-02-21T18:54:11.153650Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:10.486152Z"
+     "iopub.execute_input": "2023-02-25T23:24:21.935505Z",
+     "iopub.status.busy": "2023-02-25T23:24:21.935083Z",
+     "iopub.status.idle": "2023-02-25T23:24:22.451436Z",
+     "shell.execute_reply": "2023-02-25T23:24:22.450272Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:21.935462Z"
     },
     "tags": []
    },
@@ -316,7 +316,7 @@
    ],
    "source": [
     "# Test `fit_models()` with kwargs -- shouldn't throw any errors\n",
-    "pc_copy.fit_models(fit_site_level_first=False)"
+    "pc_copy.fit_models(fix_hill_coefficient=True, fix_non_neutralized_frac=True)"
    ]
   },
   {
@@ -333,11 +333,11 @@
    "id": "1b73d334-a4f0-4dc6-b636-6c179930dd74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:11.160306Z",
-     "iopub.status.busy": "2023-02-21T18:54:11.159962Z",
-     "iopub.status.idle": "2023-02-21T18:54:11.254958Z",
-     "shell.execute_reply": "2023-02-21T18:54:11.254140Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:11.160278Z"
+     "iopub.execute_input": "2023-02-25T23:24:22.456427Z",
+     "iopub.status.busy": "2023-02-25T23:24:22.456105Z",
+     "iopub.status.idle": "2023-02-25T23:24:22.555034Z",
+     "shell.execute_reply": "2023-02-25T23:24:22.554257Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:22.456400Z"
     },
     "tags": []
    },
@@ -356,11 +356,11 @@
    "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-21T18:54:11.256225Z",
-     "iopub.status.busy": "2023-02-21T18:54:11.255928Z",
-     "iopub.status.idle": "2023-02-21T18:54:11.343879Z",
-     "shell.execute_reply": "2023-02-21T18:54:11.343132Z",
-     "shell.execute_reply.started": "2023-02-21T18:54:11.256208Z"
+     "iopub.execute_input": "2023-02-25T23:24:22.556231Z",
+     "iopub.status.busy": "2023-02-25T23:24:22.555920Z",
+     "iopub.status.idle": "2023-02-25T23:24:22.634731Z",
+     "shell.execute_reply": "2023-02-25T23:24:22.633968Z",
+     "shell.execute_reply.started": "2023-02-25T23:24:22.556213Z"
     },
     "tags": []
    },
