--- a/notebooks/real_LyCoV1404.ipynb
+++ b/notebooks/real_LyCoV1404.ipynb
@@ -18,11 +18,11 @@
    "id": "0b46edd2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:22:37.026652Z",
-     "iopub.status.busy": "2023-02-25T22:22:37.026349Z",
-     "iopub.status.idle": "2023-02-25T22:22:38.840767Z",
-     "shell.execute_reply": "2023-02-25T22:22:38.839830Z",
-     "shell.execute_reply.started": "2023-02-25T22:22:37.026630Z"
+     "iopub.execute_input": "2023-02-26T00:31:14.982057Z",
+     "iopub.status.busy": "2023-02-26T00:31:14.981643Z",
+     "iopub.status.idle": "2023-02-26T00:31:21.256544Z",
+     "shell.execute_reply": "2023-02-26T00:31:21.255780Z",
+     "shell.execute_reply.started": "2023-02-26T00:31:14.982032Z"
     },
     "tags": []
    },
@@ -53,11 +53,11 @@
    "id": "46127941",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:22:38.844442Z",
-     "iopub.status.busy": "2023-02-25T22:22:38.844230Z",
-     "iopub.status.idle": "2023-02-25T22:22:39.370893Z",
-     "shell.execute_reply": "2023-02-25T22:22:39.370289Z",
-     "shell.execute_reply.started": "2023-02-25T22:22:38.844420Z"
+     "iopub.execute_input": "2023-02-26T00:31:21.260667Z",
+     "iopub.status.busy": "2023-02-26T00:31:21.260420Z",
+     "iopub.status.idle": "2023-02-26T00:31:21.775659Z",
+     "shell.execute_reply": "2023-02-26T00:31:21.775086Z",
+     "shell.execute_reply.started": "2023-02-26T00:31:21.260646Z"
     },
     "tags": []
    },
@@ -227,11 +227,11 @@
    "id": "ad21ccc1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:22:39.374211Z",
-     "iopub.status.busy": "2023-02-25T22:22:39.373964Z",
-     "iopub.status.idle": "2023-02-25T22:22:39.505701Z",
-     "shell.execute_reply": "2023-02-25T22:22:39.505094Z",
-     "shell.execute_reply.started": "2023-02-25T22:22:39.374189Z"
+     "iopub.execute_input": "2023-02-26T00:31:21.779086Z",
+     "iopub.status.busy": "2023-02-26T00:31:21.778836Z",
+     "iopub.status.idle": "2023-02-26T00:31:21.903131Z",
+     "shell.execute_reply": "2023-02-26T00:31:21.902550Z",
+     "shell.execute_reply.started": "2023-02-26T00:31:21.779066Z"
     },
     "tags": []
    },
@@ -356,11 +356,11 @@
    "id": "2646efb0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:22:39.510069Z",
-     "iopub.status.busy": "2023-02-25T22:22:39.509793Z",
-     "iopub.status.idle": "2023-02-25T22:22:39.704503Z",
-     "shell.execute_reply": "2023-02-25T22:22:39.703800Z",
-     "shell.execute_reply.started": "2023-02-25T22:22:39.510046Z"
+     "iopub.execute_input": "2023-02-26T00:31:21.907604Z",
+     "iopub.status.busy": "2023-02-26T00:31:21.907359Z",
+     "iopub.status.idle": "2023-02-26T00:31:22.097422Z",
+     "shell.execute_reply": "2023-02-26T00:31:22.096801Z",
+     "shell.execute_reply.started": "2023-02-26T00:31:21.907584Z"
     },
     "tags": []
    },
@@ -369,13 +369,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-e1d30d2d713b4b99a8dca99f098be554\"></div>\n",
+       "<div id=\"altair-viz-95e4084bf7954faa87751115c9111dc0\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-e1d30d2d713b4b99a8dca99f098be554\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-e1d30d2d713b4b99a8dca99f098be554\");\n",
+       "    if (outputDiv.id !== \"altair-viz-95e4084bf7954faa87751115c9111dc0\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-95e4084bf7954faa87751115c9111dc0\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -508,11 +508,11 @@
    "id": "9d265060",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:22:39.707135Z",
-     "iopub.status.busy": "2023-02-25T22:22:39.706970Z",
-     "iopub.status.idle": "2023-02-25T22:23:43.320636Z",
-     "shell.execute_reply": "2023-02-25T22:23:43.319565Z",
-     "shell.execute_reply.started": "2023-02-25T22:22:39.707118Z"
+     "iopub.execute_input": "2023-02-26T00:31:22.100780Z",
+     "iopub.status.busy": "2023-02-26T00:31:22.100598Z",
+     "iopub.status.idle": "2023-02-26T00:32:24.298346Z",
+     "shell.execute_reply": "2023-02-26T00:32:24.297590Z",
+     "shell.execute_reply.started": "2023-02-26T00:31:22.100762Z"
     },
     "tags": []
    },
@@ -523,28 +523,28 @@
      "text": [
       "#\n",
       "# Fitting site-level fixed Hill coefficient and non-neutralized frac model.\n",
-      "# Starting optimization of 1248 parameters at Sat Feb 25 14:22:45 2023.\n",
+      "# Starting optimization of 1248 parameters at Sat Feb 25 16:31:27 2023.\n",
       "        step    time_sec        loss    fit_loss  reg_escape  reg_spread reg_spatial reg_uniqueness reg_uniqueness2 reg_activity reg_hill_coefficient reg_non_neutralized_frac\n",
-      "           0    0.085082       37333       37314           0           0           0              0               0       18.641                    0                        0\n",
-      "         100      8.6058        4910        4825      38.888           0           0              0               0       46.108                    0                        0\n",
-      "         177      15.164      4908.2      4822.5      39.589           0           0              0               0       46.145                    0                        0\n",
-      "# Successfully finished at Sat Feb 25 14:23:01 2023.\n",
+      "           0    0.077407       37333       37314           0           0           0              0               0       18.641                    0                        0\n",
+      "         100      8.6453        4910        4825      38.888           0           0              0               0       46.108                    0                        0\n",
+      "         177      15.261      4908.2      4822.5      39.589           0           0              0               0       46.145                    0                        0\n",
+      "# Successfully finished at Sat Feb 25 16:31:43 2023.\n",
       "#\n",
       "# Fitting fixed Hill coefficient and non-neutralized frac model.\n",
-      "# Starting optimization of 8450 parameters at Sat Feb 25 14:23:01 2023.\n",
+      "# Starting optimization of 8450 parameters at Sat Feb 25 16:31:43 2023.\n",
       "        step    time_sec        loss    fit_loss  reg_escape  reg_spread reg_spatial reg_uniqueness reg_uniqueness2 reg_activity reg_hill_coefficient reg_non_neutralized_frac\n",
-      "           0     0.12013      7347.8      7034.8      266.82  3.6355e-31           0              0               0       46.145                    0                        0\n",
-      "         100      13.793      6864.9      6706.7      95.063      10.674           0              0               0       52.402                    0                        0\n",
-      "         200      27.944      6855.5      6701.8      89.625      11.611           0              0               0       52.473                    0                        0\n",
-      "         265      36.527      6854.7      6701.4      89.038      11.746           0              0               0       52.456                    0                        0\n",
-      "# Successfully finished at Sat Feb 25 14:23:37 2023.\n",
+      "           0       0.117      7347.8      7034.8      266.82  3.6355e-31           0              0               0       46.145                    0                        0\n",
+      "         100      13.728      6864.9      6706.7      95.063      10.674           0              0               0       52.402                    0                        0\n",
+      "         200      27.478      6855.5      6701.8      89.625      11.611           0              0               0       52.473                    0                        0\n",
+      "         265        35.7      6854.7      6701.4      89.038      11.746           0              0               0       52.456                    0                        0\n",
+      "# Successfully finished at Sat Feb 25 16:32:18 2023.\n",
       "#\n",
       "# Fitting model.\n",
-      "# Starting optimization of 8452 parameters at Sat Feb 25 14:23:37 2023.\n",
+      "# Starting optimization of 8452 parameters at Sat Feb 25 16:32:18 2023.\n",
       "        step    time_sec        loss    fit_loss  reg_escape  reg_spread reg_spatial reg_uniqueness reg_uniqueness2 reg_activity reg_hill_coefficient reg_non_neutralized_frac\n",
-      "           0     0.12638      6807.4      6701.4      89.038      11.746           0              0               0       5.2456                    0                        0\n",
-      "          40      5.5245      6742.1      6633.4      90.329      11.935           0              0               0        5.242               1.1199                 0.082301\n",
-      "# Successfully finished at Sat Feb 25 14:23:43 2023.\n"
+      "           0     0.11776      6807.4      6701.4      89.038      11.746           0              0               0       5.2456                    0                        0\n",
+      "          40      5.3274      6742.1      6633.4      90.329      11.935           0              0               0        5.242               1.1199                 0.082301\n",
+      "# Successfully finished at Sat Feb 25 16:32:24 2023.\n"
      ]
     }
    ],
@@ -583,11 +583,11 @@
    "id": "8e887519",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:23:43.325980Z",
-     "iopub.status.busy": "2023-02-25T22:23:43.325685Z",
-     "iopub.status.idle": "2023-02-25T22:23:43.346705Z",
-     "shell.execute_reply": "2023-02-25T22:23:43.345535Z",
-     "shell.execute_reply.started": "2023-02-25T22:23:43.325956Z"
+     "iopub.execute_input": "2023-02-26T00:32:24.302514Z",
+     "iopub.status.busy": "2023-02-26T00:32:24.302252Z",
+     "iopub.status.idle": "2023-02-26T00:32:24.321072Z",
+     "shell.execute_reply": "2023-02-26T00:32:24.320421Z",
+     "shell.execute_reply.started": "2023-02-26T00:32:24.302490Z"
     },
     "tags": []
    },
@@ -663,11 +663,11 @@
    "id": "d7b168a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:23:43.352236Z",
-     "iopub.status.busy": "2023-02-25T22:23:43.351815Z",
-     "iopub.status.idle": "2023-02-25T22:23:43.356120Z",
-     "shell.execute_reply": "2023-02-25T22:23:43.355445Z",
-     "shell.execute_reply.started": "2023-02-25T22:23:43.352196Z"
+     "iopub.execute_input": "2023-02-26T00:32:24.324247Z",
+     "iopub.status.busy": "2023-02-26T00:32:24.324011Z",
+     "iopub.status.idle": "2023-02-26T00:32:24.327271Z",
+     "shell.execute_reply": "2023-02-26T00:32:24.326658Z",
+     "shell.execute_reply.started": "2023-02-26T00:32:24.324228Z"
     },
     "tags": []
    },
@@ -691,11 +691,11 @@
    "id": "f7db9fc1-1a45-403e-b504-6cbc02f68af7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:23:43.359310Z",
-     "iopub.status.busy": "2023-02-25T22:23:43.359099Z",
-     "iopub.status.idle": "2023-02-25T22:23:43.413036Z",
-     "shell.execute_reply": "2023-02-25T22:23:43.412326Z",
-     "shell.execute_reply.started": "2023-02-25T22:23:43.359287Z"
+     "iopub.execute_input": "2023-02-26T00:32:24.330026Z",
+     "iopub.status.busy": "2023-02-26T00:32:24.329852Z",
+     "iopub.status.idle": "2023-02-26T00:32:24.353751Z",
+     "shell.execute_reply": "2023-02-26T00:32:24.353233Z",
+     "shell.execute_reply.started": "2023-02-26T00:32:24.330007Z"
     },
     "tags": []
    },
@@ -807,11 +807,11 @@
    "id": "1a9d6f5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:23:43.416870Z",
-     "iopub.status.busy": "2023-02-25T22:23:43.416686Z",
-     "iopub.status.idle": "2023-02-25T22:23:45.360993Z",
-     "shell.execute_reply": "2023-02-25T22:23:45.360090Z",
-     "shell.execute_reply.started": "2023-02-25T22:23:43.416851Z"
+     "iopub.execute_input": "2023-02-26T00:32:24.356624Z",
+     "iopub.status.busy": "2023-02-26T00:32:24.356427Z",
+     "iopub.status.idle": "2023-02-26T00:32:26.259872Z",
+     "shell.execute_reply": "2023-02-26T00:32:26.259219Z",
+     "shell.execute_reply.started": "2023-02-26T00:32:24.356609Z"
     },
     "tags": []
    },
@@ -820,13 +820,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-9154ad75a343448fa394d26b21d53253\"></div>\n",
+       "<div id=\"altair-viz-686fb72f64314c4c993aa43fffa63a4e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-9154ad75a343448fa394d26b21d53253\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-9154ad75a343448fa394d26b21d53253\");\n",
+       "    if (outputDiv.id !== \"altair-viz-686fb72f64314c4c993aa43fffa63a4e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-686fb72f64314c4c993aa43fffa63a4e\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -922,11 +922,11 @@
    "id": "837eb0ea-e56e-4b5a-badd-94923ceca75d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:23:45.365071Z",
-     "iopub.status.busy": "2023-02-25T22:23:45.364764Z",
-     "iopub.status.idle": "2023-02-25T22:23:46.228811Z",
-     "shell.execute_reply": "2023-02-25T22:23:46.227905Z",
-     "shell.execute_reply.started": "2023-02-25T22:23:45.365049Z"
+     "iopub.execute_input": "2023-02-26T00:32:26.261024Z",
+     "iopub.status.busy": "2023-02-26T00:32:26.260842Z",
+     "iopub.status.idle": "2023-02-26T00:32:27.102749Z",
+     "shell.execute_reply": "2023-02-26T00:32:27.102240Z",
+     "shell.execute_reply.started": "2023-02-26T00:32:26.261008Z"
     },
     "tags": []
    },
@@ -935,13 +935,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-896635d0d0fd439aa0bd786410f49c05\"></div>\n",
+       "<div id=\"altair-viz-923b5a17dd1049328b00c1f53af7f3e6\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-896635d0d0fd439aa0bd786410f49c05\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-896635d0d0fd439aa0bd786410f49c05\");\n",
+       "    if (outputDiv.id !== \"altair-viz-923b5a17dd1049328b00c1f53af7f3e6\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-923b5a17dd1049328b00c1f53af7f3e6\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1026,11 +1026,11 @@
    "id": "f9d15bf6-c67b-46aa-9f69-96b97133e701",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:23:46.229940Z",
-     "iopub.status.busy": "2023-02-25T22:23:46.229649Z",
-     "iopub.status.idle": "2023-02-25T22:23:47.084577Z",
-     "shell.execute_reply": "2023-02-25T22:23:47.083625Z",
-     "shell.execute_reply.started": "2023-02-25T22:23:46.229923Z"
+     "iopub.execute_input": "2023-02-26T00:32:27.103598Z",
+     "iopub.status.busy": "2023-02-26T00:32:27.103442Z",
+     "iopub.status.idle": "2023-02-26T00:32:27.944606Z",
+     "shell.execute_reply": "2023-02-26T00:32:27.944109Z",
+     "shell.execute_reply.started": "2023-02-26T00:32:27.103584Z"
     },
     "tags": []
    },
@@ -1039,13 +1039,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-86d944b2d94f42679ca04b86148a4163\"></div>\n",
+       "<div id=\"altair-viz-5b4b4cf4dd0943a0a5125455850a247b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-86d944b2d94f42679ca04b86148a4163\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-86d944b2d94f42679ca04b86148a4163\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5b4b4cf4dd0943a0a5125455850a247b\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5b4b4cf4dd0943a0a5125455850a247b\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1130,11 +1130,11 @@
    "id": "aeff75ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:23:47.085901Z",
-     "iopub.status.busy": "2023-02-25T22:23:47.085572Z",
-     "iopub.status.idle": "2023-02-25T22:23:47.146137Z",
-     "shell.execute_reply": "2023-02-25T22:23:47.145364Z",
-     "shell.execute_reply.started": "2023-02-25T22:23:47.085880Z"
+     "iopub.execute_input": "2023-02-26T00:32:27.945695Z",
+     "iopub.status.busy": "2023-02-26T00:32:27.945473Z",
+     "iopub.status.idle": "2023-02-26T00:32:28.003971Z",
+     "shell.execute_reply": "2023-02-26T00:32:28.003466Z",
+     "shell.execute_reply.started": "2023-02-26T00:32:27.945679Z"
     },
     "tags": []
    },
@@ -1230,29 +1230,17 @@
    "id": "c05b9029-6c4b-4c14-88cd-ed997a32b84a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-25T22:23:47.147339Z",
-     "iopub.status.busy": "2023-02-25T22:23:47.147041Z",
-     "iopub.status.idle": "2023-02-25T22:23:47.402480Z",
-     "shell.execute_reply": "2023-02-25T22:23:47.401726Z",
-     "shell.execute_reply.started": "2023-02-25T22:23:47.147319Z"
+     "iopub.execute_input": "2023-02-26T00:32:28.005081Z",
+     "iopub.status.busy": "2023-02-26T00:32:28.004844Z",
+     "iopub.status.idle": "2023-02-26T00:32:28.008126Z",
+     "shell.execute_reply": "2023-02-26T00:32:28.007469Z",
+     "shell.execute_reply.started": "2023-02-26T00:32:28.005064Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mset\u001b[39m(top_sites[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msite\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m.\u001b[39missubset({\u001b[38;5;241m447\u001b[39m, \u001b[38;5;241m444\u001b[39m, \u001b[38;5;241m441\u001b[39m, \u001b[38;5;241m442\u001b[39m, \u001b[38;5;241m443\u001b[39m, \u001b[38;5;241m445\u001b[39m})\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "assert set(top_sites[\"site\"]).issubset({447, 444, 441, 442, 443, 445})"
+    "assert set(top_sites[\"site\"]).issubset({447, 444, 441, 442, 443, 445, 496})"
    ]
   },
   {
